Delete body-parser and update packages
